# askbot-devel

./: .gitignore  .pre-commit-config.yaml  README.md  askbot_requirements.txt  askbot_setup_test_inputs.txt  pyproject.toml  requirements-tests.txt  setup.py
.github/workflows/: tests.yml
.tx/: config
askbot/: __init__.py  admin.py  api.py  apps.py  context.py  exceptions.py  feed.py  forms.py  signals.py  startup_procedures.py  tasks.py  urls.py
askbot/conf/: __init__.py  access_control.py  badges.py  email.py  email_text.py  external_keys.py  feedback.py  flatpages.py  forum_data_rules.py  group_settings.py  karma_and_badges_visibility.py  ldap.py  leading_sidebar.py  license.py  login_providers.py  markup.py  minimum_reputation.py  moderation.py  question_lists.py  reputation_changes.py  settings_wrapper.py  sidebar_main.py  sidebar_profile.py  sidebar_question.py  site_modes.py  site_settings.py  skin_general_settings.py  social_sharing.py  spam_and_moderation.py  static_settings.py  super_groups.py  user_settings.py  vote_rules.py  words.py
askbot/const/: __init__.py
askbot/deployment/: __init__.py  utils.py
askbot/jinja2/: base.html  close.html  groups.html  macros.html  reopen.html
askbot/mail/: __init__.py  lamson_handlers.py  messages.py
askbot/middleware/: forum_mode.py  head_request.py  spaceless.py
askbot/migrations/: 0010_populate_language_code_for_reps_20160108_1052.py  0020_auto_20221217_2232.py  0021_auto_20221218_1715.py  0022_auto_20230408_1751.py  0023_auto_20230724_0132.py  0024_init_close_reason_text_20230724_0136.py  0025_userprofile_email_is_confidential_and_more.py  0026_create_analytics_session_event.py
askbot/models/: __init__.py  analytics.py  badges.py  message.py  post.py  question.py  reply_by_email.py  repute.py  tag.py  user.py  user_profile.py  widgets.py
askbot/setup_templates/: settings.py.jinja2
askbot/skins/: jinja2_environment.py
askbot/spam_checker/: __init__.py  akismet_spam_checker.py  askbot_spam_checker.py
askbot/spam_classifier/: akismet_utils.py
askbot/spam_classifiers/: akismet_spam_classifier.py
askbot/templates/: macros.html
askbot/templatetags/: extra_filters_jinja.py  extra_tags.py  premail.py  textwrap.py
askbot/tests/: akismet.py  skip_test_reply_by_email.py  test_akismet.py  test_forms.py  test_head_request_middleware.py  test_management_commands.py  test_page_load.py  test_permission_assertions.py  test_reply_by_email.py  test_settings.py  test_skins.py  test_unsubscribe_user.py  test_user_model.py  test_utils.py  utils.py
askbot/utils/: akismet_utils.py  decorators.py  forms.py  functions.py  html.py  http.py  markup.py  slug.py  timezone.py  views.py  (+1 more)
backend/: askbot_requirements.txt
frontend/: package-lock.json  package.json
(+142 files in other folders)
