# pyproject.toml duplicates some information in setup.py
# However, pyproject.toml is now standard, and needed for ruff config
# See also https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# See also https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "askbot"
requires-python = ">=3.8"
dynamic = ["version", "dependencies", "scripts", "classifiers", "license",
    "description", "readme", "authors", "keywords"]

[tool.setuptools.dynamic]
version = {attr = "askbot.VERSION"}

[tool.ruff]
# exclude Django migrations
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
# add more rules
# see https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml
# "F" contains autoflake, see https://github.com/astral-sh/ruff/issues/1647
# These are all TODO, because they make so many changes.
# I put ** on some to do earlier.
select = [
    # default Ruff checkers as of ruff 0.1.3: E4, E7, E9, F
    # ** TODO: "E4",
    # ** TODO: "E7",
    # ** TODO: "E9",
    # ** TODO: "F",  # pyflakes

    # the rest in alphabetical order:
    # TODO: "A",   # flake8-builtins
    # TODO: "ARG", # flake8-unused-arguments
    # TODO: "B",   # flake8-bugbear
    # TODO: "BLE", # flake8-blind-except
    # TODO: Do I want "COM", # flake8-commas
    # TODO: "C4",  # flake8-comprehensions
    # ** TODO: "DJ",  # flake8-django
    # TODO: "DTZ", # flake8-datetimez
    # TODO: "EM",  # flake8-errmsg
    # ** TODO: "EXE", # flake8-executable
    # TODO: "FURB", # refurb
    # TODO: "FBT", # flake8-boolean-trap
    # TODO: "G",   # flake8-logging-format
    # ** TODO: "I",   # isort
    # TODO: "ICN", # flake8-import-conventions
    # TODO: "INP", # flake8-no-pep420
    # TODO: "INT", # flake8-gettext
    # TODO: "ISC", # flake8-implicit-str-concat
    # TODO: "LOG", # flake8-logging
    # TODO: "PERF", # perflint
    # TODO: "PIE", # flake8-pie
    # TODO: "PL",  # pylint
    # TODO: "PYI", # flake8-pyi
    # TODO: "RET", # flake8-return
    # TODO: "RSE", # flake8-raise
    # TODO: "RUF",
    # TODO: "SIM", # flake8-simplify
    # TODO: "SLF", # flake8-self
    # TODO: "SLOT", # flake8-slots
    # TODO: "TID", # flake8-tidy-imports
    # ** TODO: "UP",  # pyupgrade
    # ** TODO: "Q",   # flake8-quotes
    # TODO: "TCH", # flake8-type-checking
    # TODO: "T10", # flake8-debugger
    # ** TODO: "T20", # flake8-print
    # TODO: "S",   # flake8-bandit
    # TODO: "YTT", # flake8-2020
    # TODO: add more flake8 rules
]

# rules to ignore globally:
ignore = [
]

[tool.ruff.lint.extend-per-file-ignores]

# per-file ignores
#"**/migrations/*" = ["Q"]
#"**/management/commands/*" = ["T20"]
